--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.13.3",
