Revert "Refactor movie-card.jsx file"
This reverts commit 3e15d682ac2ba951f982a0b9cf5c9f2243be9861.

--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.3"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.13.3",
