--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
-    "react-router": "^7.5.3",
-    "react-router-dom": "^7.5.3"
+    "react-router": "^6.8.1",
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.13.3",
+    "@parcel/transformer-sass": "2.13.3",
     "process": "^0.11.10"
   }
 }
