--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "2.13.3",
+    "parcel": "^2.13.3",
+    "parcel-bundler": "^1.12.5",
     "process": "^0.11.10"
   }
 }
