--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "author": "",
   "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "parcel build src/index.html --public-url /"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "bootstrap": "^5.3.5",
@@ -29,8 +28,6 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "2.13.3",
-    "parcel": "^2.13.3",
-    "parcel-bundler": "^1.12.5",
     "process": "^0.11.10"
   }
 }
