--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "",
   "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build src/index.html --public-url /"
   },
   "dependencies": {
     "bootstrap": "^5.3.5",
