--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "parcel build src/index.html --public-url / --no-workers"
+    "build": "parcel build src/index.html --public-url /"
   },
   "dependencies": {
     "bootstrap": "^5.3.5",
@@ -28,8 +28,7 @@
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "2.13.3",
-    "parcel": "^2.13.3",
-    "process": "^0.11.10"
+    "@parcel/transformer-sass": "^2.15.2",
+    "parcel": "^2.15.2"
   }
 }
